--- a/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/Room/RoomViewController.storyboard
+++ b/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/Room/RoomViewController.storyboard
@@ -76,7 +76,7 @@
                                             <action selector="onClickCanvas:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Ytx-oy-8bD"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyh-GX-Ith" customClass="MTHKView" customModule="HaishinKit">
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyh-GX-Ith" customClass="MTHKView" customModule="HaishinKit">
                                         <rect key="frame" x="16" y="934.5" width="158.5" height="237.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
